# trace-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.js  styles.css
.github/workflows/: ci.yml  deploy.yml
e2e/: trace-viewer.spec.js
src/: ansi_parser.rs  lib.rs  markdown_exporter.rs  models.rs  test_case_loader.rs  trace_loader.rs
src/components/: action_details.rs  action_list.rs  ansi_text.rs  file_drop_zone.rs  mod.rs  test_case_card.rs  test_case_list.rs  trace_viewer.rs
tests/: README.md  e2e_tests.rs  models_tests.rs  test_case_loader_tests.rs  trace_loader_tests.rs
