[package]
name = "trace-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "DragEvent",
    "DataTransfer",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "ProgressEvent",
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = { version = "0.11", features = ["file"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"

# E2E test dependencies - optional, only needed when running E2E tests
playwright = { version = "0.0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.8"

[features]
default = []
e2e-tests = ["playwright", "tokio"]

[profile.release]
opt-level = "z"
lto = true

[profile.test]
opt-level = 0
